--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MSSQL_SERVER=IN-SOMNATH-GOSW\\SQLEXPRESS
+MSSQL_SERVER=IN-SANJAY-JAISW\SQLEXPRESS
 MSSQL_DATABASE=MakeMyTeam
 MONGO_URI=mongodb://localhost:27017/makemyteam
 PORT=3000
