--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.13.1",
+    "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.9"
   }
