generating sql query

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-GEMINI_API_KEY=AIzaSyBUlNz-cYkOkFt6uR_PKDQbxzzilC_JNFA
+GEMINI_API_KEY=API_KEY
 MSSQL_SERVER=IN-SOMNATH-GOSW\SQLEXPRESS
 MSSQL_DATABASE=makemyteam
 MONGO_URI=mongodb://localhost:27017/makemyteam
