--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "mongoose": "^8.13.2",
+    "msnodesqlv8": "^4.5.0",
+    "mssql": "^11.0.1",
     "nodemon": "^3.1.9"
   }
 }
